Revision history for Perl extension Email::Simple

{{$NEXT}}

2.208     2015-07-20 20:34:04-04:00 America/New_York
        - same as v2.207
        - ...but bump perl required to v5.8

2.207     2015-07-04 14:23:36-04:00 America/New_York (TRIAL RELEASE)
        - fold headers passed to header arg in create method
          https://github.com/rjbs/Email-Simple/issues/7

2.206     2015-03-26 23:30:51-04:00 America/New_York
        - the changes from 2.204 are back (and re-listed here), but now with
          the added benefit of not breaking Email::MIME; see the git repository
          for the sordid details
        - provide header_raw and header_raw_set for consistent behavior between
          Email::Simple and Email::MIME; also, header_raw_pairs

2.205     2015-03-26 14:54:45-04:00 America/New_York
        - undo changes from 2.204 until safe Email::MIME upgrade path is
          available

2.204     2015-03-25 22:50:49-04:00 America/New_York
        - provide header_raw and header_raw_set for consistent behavior between
          Email::Simple and Email::MIME; also, header_raw_pairs

2.203     2014-02-14 21:56:14-05:00 America/New_York
        - translate vertical whitespace in headers into horizontal whitespace,
          with a warning

2.202     2013-09-04 09:48:33 America/New_York
          repackage with Dist::Zilla; update repo and bug tracker

2.201     2013-04-16
          no changes

2.200_01  2013-04-09
          preserve the original header layout unless changed

2.103     2013-04-09
          fix a bug in header unfolding where "0\n 1" could be unfolded to "01"

2.102     2012-07-13
          recognize crlf correctly even if there is no body (thanks, Christian
          Walde)

2.101     2011-12-23
          remove instruction to use ::Creator instead of just ->create

          documentation improvements (thanks, Michael Stevens)

2.100     2009-11-03
          merge Email-Simple-Creator into Email-Simple distribution

2.005     2009-01-22